[package]
authors = ["h5p9sl"]
categories = ["multimedia::images"]
description = "sriv is a convenient and fast alternative to 'sxiv'"
edition = "2018"
keywords = ["image", "viewer"]
license = "MIT/Apache-2.0"
name = "sriv"
readme = "README.md"
repository = "https://github.com/h5p9sl/sriv"
version = "0.1.0-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.24"
glium = "0.27"
clap = "2.33"
image = "0.23"
