[package]
authors = ["h5p9sl"]
categories = ["multimedia::images"]
description = "A convenient image viewer inspired by sxiv, written in Rust"
edition = "2018"
keywords = ["image", "viewer"]
license = "MIT/Apache-2.0"
name = "sriv"
readme = "README.md"
repository = "https://github.com/h5p9sl/sriv"
version = "0.2.0-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
colored = "2.0"
env_logger = "0.7"
glium = "0.27"
glutin = "0.24"
image = "0.23"
log = "0.4"
vek = "0.12"
