[package]
authors = ["h5p9sl"]
categories = ["multimedia::images"]
description = "A convenient image viewer inspired by sxiv, written in Rust"
edition = "2018"
keywords = ["image", "viewer"]
license = "MIT/Apache-2.0"
name = "sriv"
readme = "README.md"
repository = "https://github.com/h5p9sl/sriv"
version = "0.2.0-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
colored = "2.0"

env_logger = "0.8"
log = "0.4"

glium = "0.28"
glutin = "0.25"
vek = "0.12"

image = "0.23"
